# fakeit-demo

./: .gitignore  CMakeLists.txt  ILogger.h  Logger.cpp  Logger.h  lest.hpp  main.cpp  test.cpp
system/: FileSystemImpl.cpp  FileSystemImpl.h  IFileSystem.h
